# glp-archive

./: .gitattributes  LICENSE  README.md
infra/gkx/: README.md  pyproject.toml
infra/gkx/gkx/mdx/: batcher.py  interface.py  nve.py  nvt_npt.py  recompute.py  utils.py
infra/gkx/gkx/utils/: trees.py
infra/gkx/tests/integration/lj_npt/: md.yaml  test.py  test.sh
infra/gkx/tests/integration/lj_nvt/: test.sh
infra/gkx/tests/integration/lj_re/: md.yaml  re.yaml  re_parallel.yaml  test.py  test.sh
infra/gkx/tests/unit/: test_utils_trees.py
meta/: README_infra.md  assemble.sh  copy_infra.sh  copy_results.sh  copy_work.sh
results/: README.md
results/data/snse_kappa/: collect.py  reference.npz  reference.py  sokrates_L1_prod.nc  sokrates_L2_prod.nc  sokrates_L3_prod.nc
results/data/snse_kappa_convergence_N_t/: collect.py  production_models_train_default_L1.nc  production_models_train_default_L2.nc  production_models_train_default_L3.nc
results/data/snse_phonons/: aims_256.npz  collect.py  default_L1_256.npz  default_L2_256.npz  default_L3_256.npz
results/data/snse_vdos/: aims.nc  collect.py  default_L1.nc  default_L2.nc  default_L3.nc
results/plots/: glp.mplstyle
results/plots/lj_stress_and_heat_flux/: plot_fd_convergence.py  shared.py  table.py  table_components.py  table_og.py  table_timing.py
results/plots/n_unfolded/: table.py  unfolder_engine.py
results/plots/snse_eos/: Makefile  README.md  plot_eos.py  plot_eos_comparison.py
results/tbx/: __init__.py  gk.py  gk_plot.py  literals.py  load.py  phonons.py  tables.py
work/: README.md
(+807 files in other folders)
